--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Turing School of Software and Design",
   "license": "MIT",
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
     "css-loader": "^2.1.0",
@@ -32,6 +33,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "font-awesome-webpack": "0.0.5-beta.2",
     "jquery": "^3.4.1"
   }
 }
